# mesh-deformations

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmark_config_data.hpp  benchmark_config_parser.hpp  benchmark_controller.hpp  config.txt  main.cpp
cmake/: catch2.cmake  libigl.cmake  xxhash.cmake
include/cache/: deformations_cache.hpp  deformations_cache_interface.hpp
include/deformation/: deformation_controller.hpp  deformation_controller_interface.hpp  deformation_factory.hpp  deformation_interface.hpp  deformation_params_interface.hpp  deformation_task_interface.hpp  deformations_snapshot.hpp  edge_smoothing_deformation.hpp  vertex_offset_deformation.hpp
include/structures/: mesh.hpp
include/threadpool/: ThreadPool.hpp  threadpool.hpp
include/utils/: containers.hpp  data_types.hpp  deformation_registry.hpp  filesystem.hpp  hashes.hpp  mesh_loading.hpp  mutithreading.hpp
src/cache/: deformations_cache.cpp
src/deformation/: deformation_controller.cpp  deformations_snapshot.cpp
src/structures/: mesh.cpp
test/: CMakeLists.txt  test_deformations.cpp
